--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,4 +1,41 @@
-@import '_variables';
-@import '_color-variables';
-@import '_grid';
-@import '_normalize';
+@charset "UTF-8";
+
+// Color
+@import "color-variables";
+@import "color-classes";
+
+// Variables;
+@import "variables";
+
+// Reset
+@import "normalize";
+
+// components
+@import "global";
+@import "badges";
+@import "icons-material-design";
+@import "grid";
+@import "navbar";
+@import "typography";
+@import "transitions";
+@import "cards";
+@import "toast";
+@import "tabs";
+@import "tooltip";
+@import "buttons";
+@import "dropdown";
+@import "waves";
+@import "modal";
+@import "collapsible";
+@import "chips";
+@import "materialbox";
+@import "forms/forms";
+@import "table_of_contents";
+@import "sidenav";
+@import "preloader";
+@import "slider";
+@import "carousel";
+@import "tapTarget";
+@import "pulse";
+@import "datepicker";
+@import "timepicker";
